--- a/index.html
+++ b/index.html
@@ -31,28 +31,25 @@
     <ul id="results"></ul>
 
     <script>
-        async function search() {
-            const searchTerm = document.getElementById('search-input').value;
-            const apiUrl = `https://commons.wikimedia.org/w/api.php?action=query&list=search&format=json&origin=*&srsearch=${encodeURIComponent(searchTerm)}`;
+    async function search() {
+        const searchTerm = document.getElementById('search-input').value;
+        const apiUrl = `https://commons.wikimedia.org/w/api.php?action=query&list=search&format=json&origin=*&srsearch=${encodeURIComponent(searchTerm)}`;
 
-            try {
-                const response = await fetch(apiUrl);
-                const data = await response.json();
+        try {
+            const response = await fetch(apiUrl);
+            const data = await response.json();
+
+            // Check if the 'query' object and its 'search' property exist before displaying results
+            if (data.query && data.query.search) {
                 displayResults(data.query.search);
-            } catch (error) {
-                console.error('Error fetching data:', error);
+            } else {
+                displayResults([]);
             }
+        } catch (error) {
+            console.error('Error fetching data:', error);
         }
+    }
 
-        function displayResults(results) {
-            const resultsContainer = document.getElementById('results');
-            resultsContainer.innerHTML = '';
-            results.forEach(result => {
-                const listItem = document.createElement('li');
-                listItem.innerHTML = `<a href="https://commons.wikimedia.org/wiki/${encodeURIComponent(result.title)}" target="_blank">${result.title}</a>`;
-                resultsContainer.appendChild(listItem);
-            });
-        }
     </script>
 </body>
 </html>
